# collatz

./: Cargo.toml  makefile  readme.md
cli/: Cargo.toml  makefile  readme.md
cli/src/: arg.rs  cli.rs  main.rs
collatz/: Cargo.toml  readme.md
collatz/benches/: benches.rs
collatz/src/: lib.rs
src/: lib.rs  main.rs
tests/: cli.rs
