[package]
name = "collatz"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
num = "0.4.1"
num-bigint = "0.4.4"

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.18.2"
