[package]
name = "collatz-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collatz = { path = "../collatz" }
clap = { version = "4.4.16", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.13"
pretty_assertions = "1.4.0"
rstest = "0.18.2"
