[package]
name = "collatz"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[[bench]]
name = "benches"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
num-bigint = "0.4.4"

[dev-dependencies]
criterion = "0.5.1"
pretty_assertions = "1.4.0"
rstest = "0.18.2"
